# windmap

./: .gitignore  CMakeLists.txt  ColorTexture.cpp  ColorTexture.h  FrameBuffer.cpp  FrameBuffer.h  Program.cpp  Program.h  README.md  WindMap.cpp  WindMap.h  windmap_main.cpp
app/: CMakeLists.txt  Camera.cpp  Glutils.cpp  main.cpp
data/: windmap.ini
omegalib_module_test/: windmap.py
scripts/: download.sh  gen_windmap.py  gen_windmap2.py  prepare.py  tmp.json  utmp.grib  vtmp.grib
shaders/: draw.frag  draw.vert  mesh.frag  mesh.vert  point.frag  point.vert  quad.vert  screen.frag  update.frag
winddata/: windmap.ini  windmap_globe.ini  windmap_hi.ini  windmap_southwest.ini
